Correct overflow of vue div

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,5 +22,5 @@ main > .container{
 }
 .vue{
   width: max-content;
-  overflow: scroll;
+  overflow: hidden;
 }
